# sv_circuit

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  default.nix  derivation.nix  flake.nix  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
nix/: sources.json
src/: compositor.rs  export.rs  lib.rs  lucid.rs  main.rs  parse.rs  stat.rs
src/generic/: circuit.rs  errors.rs  flattener.rs  mod.rs
src/optimize/: bin.rs  dead.rs  isolate.rs  mod.rs  ram.rs
tests/: integration.rs
tests/data/drop_inputs/: src.blif
tests/data/multi/: flat.blif  src.blif
tests/data/simple/: flat.blif  input.txt  src.blif
verilog_tools/blif_lint/: __init__.py  blif_lint.py
verilog_tools/bristolify/: __init__.py  fieldswitch_to_bin.py  gates.py  netlist_to_bristol.py  test_gates.py
verilog_tools/compositor/: __init__.py  run_compositor.py
verilog_tools/lucid/: __init__.py  run_lucid.py
verilog_tools/reverie/: __init__.py  run_reverie.py
verilog_tools/utils/: __init__.py  external.py  timer.py
verilog_tools/yosys/: arithmetic.lib  my_library.lib  netlistify.py  yosys.py  yosys_stat.py  yosys_stat.sh
verilog_tools/yosys/corpus/: and_xor.v  benes.v  big_reduce_and.v  bristolify.sh  cmp.v  const_check.v  const_nested.v  const_split.v  const_tiny.v  decoder_lib.v  dropped_bits.v  eval_bristol.py  implicit_branch.v  moderately_complex.v  mux.v  mux_lib.v  nesting.v  reuse_ouput.v  revtest.sh  rf.v  tiny_split.v  tinyreg.v
verilog_tools/yosys/corpus/fieldswitched/: connection.v  gf2.v  z64.v
