[package]
name = "sv_circuit"
version = "0.1.1"
authors = ["Trail of Bits <sieve@trailofbits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
maplit = "1.0.2"
rand = "0.7.3"
counter = "0.5.2"
clap = "2.33.3"
itertools = "0.10.0"
mcircuit = { git = "https://github.com/trailofbits/mcircuit", branch = "main" }
num-traits = "0.2"
serde = "1.0.159"
bincode = "1.3.2"
indicatif = "0.17.3"
fnv = "1.0.7"
thiserror = "1.0.40"
anyhow = "1.0.70"

[lib]
name = "sv_circuit"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "sv-compositor"
path = "src/main.rs"
