[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-tools"
version = "0.0.1"
dependencies = [
    "psutil",
]

[project.scripts]
sv-stat = "verilog_tools.yosys.yosys_stat:main"

[tool.black]
target-version = ['py311']
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | submodules
    | verilog_tools/verilog_encoder
  )/
)
'''
